--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "npm run clean && npm run build:bundle",
     "inline-css": "node scripts/inline-css.mjs",
     "bundle-html": "node scripts/bundle-html.mjs",
-    "dist": "npm run build && npm run inline-css && npm run bundle-html"
+    "dist": "npm run build && npm run inline-css && npm run bundle-html",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "license": "ISC",
   "type": "module",
@@ -16,6 +18,9 @@
     "typescript": "5.5",
     "esbuild": "^0.21.5",
     "@vanilla-extract/css": "^1.16.1",
-    "@vanilla-extract/esbuild-plugin": "^2.3.5"
+    "@vanilla-extract/esbuild-plugin": "^2.3.5",
+    "vitest": "^1.6.0",
+    "@vitest/coverage-v8": "^1.6.0",
+    "happy-dom": "^12.10.3"
   }
 }
