--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "typescript": "5.5",
-    "esbuild": "^0.21.5",
-    "@vanilla-extract/css": "^1.16.1",
-    "@vanilla-extract/esbuild-plugin": "^2.3.5",
-    "vitest": "^1.6.0",
-    "@vitest/coverage-v8": "^1.6.0",
-    "happy-dom": "^12.10.3"
+    "@vanilla-extract/css": "^1.17.4",
+    "@vanilla-extract/esbuild-plugin": "^2.3.18",
+    "@vitest/coverage-v8": "^3.2.4",
+    "esbuild": "^0.25.11",
+    "happy-dom": "^20.0.5",
+    "typescript": "^5.9.3",
+    "vitest": "^3.2.4"
   }
 }
