--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "license": "ISC",
   "type": "module",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "devDependencies": {
     "@vanilla-extract/css": "^1.17.4",
     "@vanilla-extract/esbuild-plugin": "^2.3.18",
