--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "inline-css": "node scripts/inline-css.mjs",
     "bundle-html": "node scripts/bundle-html.mjs",
     "dist": "npm run build && npm run inline-css && npm run bundle-html",
+    "e2e:webserver": "npm run dist && node scripts/serve-dist.mjs",
+    "playwright:install": "playwright install",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:e2e": "TS_NODE_PROJECT=tsconfig.playwright.json playwright test"
   },
   "license": "ISC",
   "type": "module",
@@ -18,6 +21,7 @@
     "node": ">=22.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@vanilla-extract/css": "^1.17.4",
     "@vanilla-extract/esbuild-plugin": "^2.3.18",
     "@vitest/coverage-v8": "^3.2.4",
