--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
