--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Microwave heating time converter",
   "scripts": {
     "clean": "rm -rf build dist",
-    "build:bundle": "node scripts/build-app.mjs",
+    "build:bundle": "tsx --tsconfig tsconfig.scripts.json scripts/build-app.ts",
     "build": "npm run clean && npm run build:bundle",
-    "inline-css": "node scripts/inline-css.mjs",
-    "bundle-html": "node scripts/bundle-html.mjs",
+    "inline-css": "tsx --tsconfig tsconfig.scripts.json scripts/inline-css.ts",
+    "bundle-html": "tsx --tsconfig tsconfig.scripts.json scripts/bundle-html.ts",
     "dist": "npm run build && npm run inline-css && npm run bundle-html",
-    "e2e:webserver": "npm run dist && node scripts/serve-dist.mjs",
+    "e2e:webserver": "npm run dist && tsx --tsconfig tsconfig.scripts.json scripts/serve-dist.ts",
     "playwright:install": "playwright install",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -22,11 +22,13 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
+    "@types/node": "^24.8.1",
     "@vanilla-extract/css": "^1.17.4",
     "@vanilla-extract/esbuild-plugin": "^2.3.18",
     "@vitest/coverage-v8": "^3.2.4",
     "esbuild": "^0.25.11",
     "happy-dom": "^20.0.5",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4"
   }
